<resources>
    <string name="app_name">ZYPPYS</string>
    <string name="sign_in">Sign in</string>
    <string name="new_user_sign_up">New User? Sign Up</string>
    <string name="phone_number">Phone Number</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="referral_code_if_any">Referral Code (If Any)</string>
    <string name="terms_conditions"><u>I agree to the terms &amp; conditions</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="otp_verifiction">OTP Verifiction</string>
    <string name="otp_help_text">Zyppys has sent a one time OTP messate to verify your phone number. Carrier charges may apply</string>
    <string name="otp">OTP</string>
    <string name="resend_otp"><u>Resend OTP?</u></string>
    <string name="verify">Verify</string>
    <string name="welcome_to_zyppys">Welcome to Zyppys</string>
    <string name="enable_location">Enable Location</string>
    <string name="skip">Skip</string>
    <string name="title_activity_landing">Landing</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="cars">Cars</string>
    <string name="hotels_rooms">Hotels/Rooms</string>
    <string name="packages">Package</string>
    <string name="carpool">Carpool</string>
    <string name="packages_starting_from">Packages Starting from %1$s</string>
    <string name="base_fare">Base Fare:</string>
    <string name="service_tax">Service Tax:</string>
    <string name="fare_info">Fare Info</string>
    <string name="total_approx">Total (Approx)</string>
    <string name="traveller_name">Traveller Name</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="book_now">Book Now</string>
    <string name="more_info_text_1">* Prices/Kms mentioned are approx.</string>
    <string name="more_info_text_2">* Extra: Interstate tax, Toll parking.</string>
    <string name="more_info_text_3">* No Extra Night Charges.</string>
    <string name="more_info_text_4">* Pricing will be calculated from Pickup.</string>
    <string name="more_info_text_5">* Midnight to midnight is a day.</string>
    <string name="more_info_extra_cost_km">Extra cost/km:</string>
    <string name="more_info_extra_cost_hr">Extra cost/hr:</string>
    <string name="more_info_min_km_day">Min km/day:</string>
    <string name="more_info_know_toll_charge"><u>Know Toll Charges (approx)</u></string>
    <string name="_10_km">₹10 /km</string>
    <string name="_100_km">₹100 /km</string>
    <string name="_km_day">₹120 km/day</string>
    <string name="more_information">More Information</string>
    <string name="from">From</string>


</resources>
