<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_dark"
    tools:context="zyppys.com.customer.onboarding.OTPFragment">


    <Button
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_32dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@color/banner_bg_color"
        android:text="@string/otp_verifiction"/>

    <TextView
        android:id="@+id/otp_hint_text"
        android:layout_below="@id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_16sp"
        android:layout_margin="@dimen/dimen_16dp"
        android:text="@string/otp_help_text"/>
    <RelativeLayout
        android:layout_below="@id/otp_hint_text"
        android:id="@+id/otp_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_42dp"
        android:layout_marginLeft="@dimen/dimen_16dp"
        android:layout_marginRight="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:background="@drawable/selector_edit_text_bg">

        <FrameLayout
            android:id="@+id/otp_icon_container"
            android:layout_width="@dimen/dimen_32dp"
            android:layout_height="@dimen/dimen_32dp"
            android:background="@color/transparent"
            android:layout_marginLeft="@dimen/dimen_8dp"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true">

            <ImageView
                android:id="@+id/otp_icon"
                android:background="@drawable/selector_phone"
                android:layout_width="@dimen/dimen_24dp"
                android:layout_height="@dimen/dimen_24dp"
                android:layout_margin="@dimen/dimen_8dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:scaleType="fitXY"/>
        </FrameLayout>

        <EditText
            android:id="@+id/otp_no"
            android:layout_toRightOf="@+id/otp_icon_container"
            android:layout_toLeftOf="@+id/otp_clear"
            android:layout_toStartOf="@+id/otp_clear"
            android:layout_toEndOf="@+id/otp_icon_container"
            android:paddingLeft="@dimen/dimen_8dp"
            android:paddingRight="@dimen/dimen_8dp"
            android:paddingStart="@dimen/dimen_8dp"
            android:paddingEnd="@dimen/dimen_8dp"
            android:layout_width="match_parent"
            android:imeOptions="actionDone"
            android:hint="@string/otp"
            android:background="@color/transparent"
            android:textColorHint="@color/white"
            android:inputType="number"
            android:layout_height="@dimen/dimen_52dp"
            android:maxLength="10"/>

        <ImageView
            android:id="@+id/otp_clear"
            android:layout_width="@dimen/dimen_12dp"
            android:layout_height="@dimen/dimen_12dp"
            android:src="@drawable/close"
            android:background="@color/background_dark"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dimen_8dp"
            android:layout_marginEnd="@dimen/dimen_8dp"
            android:layout_alignParentEnd="true"
            android:visibility="gone"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/resend_otp_text"
        android:layout_below="@id/otp_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:text="@string/resend_otp"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/dimen_16sp"
        android:layout_marginTop="@dimen/dimen_24dp"/>

    <Button
        android:id="@+id/verify"
        android:layout_below="@id/resend_otp_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_42dp"
        android:textAllCaps="false"
        android:layout_marginLeft="@dimen/dimen_16dp"
        android:layout_marginRight="@dimen/dimen_16dp"
        android:textColor="@color/text_dark"
        android:background="@color/white"
        android:textSize="@dimen/dimen_16sp"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:text="@string/verify" />

    <ImageView
        android:id="@+id/close_img"
        android:src="@drawable/close"
        android:layout_width="@dimen/dimen_32dp"
        android:layout_height="@dimen/dimen_32dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dimen_24dp"/>
</RelativeLayout>
